<resources>
    <string name="app_name">BuyH</string>
    <string name="empty">В корзине пусто</string>
    <string name="add">Найдите нужный товар в каталоге и добавьте его в корзину</string>
    <string name="trans_catalog">Перейти в каталог</string>
    <string name="bin">Корзина</string>
    <string name="catalog">Каталог</string>
    <string name="nal">Наличие</string>
    <string name="price">Цена</string>
    <string name="category">Категории</string>
    <string name="find">Найти товар</string>
    <string name="sort">Сортировать: по убыванию популярности</string>
    <string name="not_found">Товаров не найдено.</string>
    <string name="dush">dush</string>
    <string name="vanna">vanna</string>
    <string name="reklama">Реклама</string>
    <string name="aaaa">aaaa</string>
    <string name="search">search</string>
    <string name="korzina">korzina</string>
    <string name="menu">menu</string>
    <string name="kafel1">kafel1</string>
    <string name="description1">description1</string>
    <string name="logo">logo</string>
    <string name="more">more</string>
    <string name="customer">Вы является продавцом или покупателем?</string>
    <string name="ims">Я продавец</string>
    <string name="imcustomer">Я покупатель</string>
    <string name="back">back</string>
    <string name="popular">Популярное</string>
    <string name="unitaz">unitaz</string>
    <string name="home">home</string>
    <string name="line">line</string>
    <string name="acc">acc</string>
    <string name="heart">heart</string>
    <string name="kran">kran</string>
    <string name="platform">Платформа для оптовых покупателей и продавцов строительных материалов. Находи лучших поставщиков и новых клиентов вместе с Нами!</string>
    <string name="nach">Начать работать!</string>
    <string name="prodatpotom">Продать потом</string>
    <string name="naxodite">Находите новых клиентов ежедневно на нашей платформе!</string>
    <string name="what">Что хотите продать?</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>
    <string name="sclientov">Найти клиентов</string>
    <string name="findpostavshik">Найти поставщиков</string>
    <string name="email">Email</string>
    <string name="phone">Телефон</string>
    <string name="whatdou">Что хотите купить?</string>
    <string name="free">Это бесплатно.</string>
    <string name="_40_1_3">Упростите процесс закупки, экономьте до 40%, выбирая из предложенных 1,3 млн поставщиков</string>
    <string name="razm">Разместить свой заказ</string>
    <string name="registration">Регистрация</string>
    <string name="фдкуфвн">Уже есть аккаунт</string>
    <string name="fio">ФИО</string>
    <string name="county">Страна</string>
    <string name="parol">Пароль</string>
    <string name="done">Готово</string>
</resources>