<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Razmestitezakaz">
    <TextView
        android:id="@+id/header_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/razm"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="40sp">
    </TextView>
    <TextView
        android:id="@+id/header_disc"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_40_1_3"
        android:textColor="#979797"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/header_bold"
        app:layout_constraintTop_toBottomOf="@id/header_disc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/free"
        android:textColor="@color/green"
        android:textSize="24sp">
    </TextView>

    <EditText
        android:id="@+id/input1"
        android:layout_width="340dp"
        android:layout_height="140dp"
        android:background="@drawable/rounded"
        app:layout_constraintTop_toBottomOf="@id/header_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/whatdou"
        android:gravity="start"/>
    <EditText
        android:id="@+id/input2"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded"
        app:layout_constraintTop_toBottomOf="@id/input1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        android:gravity="start"/>

    <EditText
        android:id="@+id/input3"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded"
        app:layout_constraintTop_toBottomOf="@id/input2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:gravity="start"/>

    <Button
        android:id="@+id/findcustomers"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/roundedbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input3"
        android:text="@string/findpostavshik"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
