<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:id="@+id/toolboox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backicon"
            android:contentDescription="@string/back">
        </ImageView>
    </Toolbar>

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prodatpotom"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/toolboox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    </TextView>
    <TextView
        android:id="@+id/description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/naxodite"
        android:layout_marginTop="15dp"
        android:textColor="#6cb4a4"
        android:textSize="@dimen/size19"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    </TextView>
    <EditText
        android:id="@+id/sellplace"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/what"
        android:textSize="@dimen/size22"

        >

    </EditText>
    <EditText
        android:id="@+id/number"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        app:layout_constraintTop_toBottomOf="@id/sellplace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        android:textSize="@dimen/size22"

        >

    </EditText>
    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        app:layout_constraintTop_toBottomOf="@id/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textSize="@dimen/size22"
        >
    </EditText>

    <Button
        android:id="@+id/findclients"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/sclientov"
        android:textSize="@dimen/size22"
        android:textColor="#6cb4a4"
        android:background="@drawable/rounded">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
