<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Korzina">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bin"
            android:src="@drawable/kor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/d40"
            android:layout_marginTop="@dimen/d50"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="@color/black"
            android:textSize="@dimen/s25"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/d300"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d30"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/black" />

        <Button
            android:layout_width="@dimen/d200"
            android:layout_height="@dimen/d50"
            android:layout_marginTop="@dimen/d75"
            android:text="@string/trans_catalog"
            android:textColor="@color/black"
            android:textSize="@dimen/s12" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
