<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Catalog">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/catalog"
            android:textColor="@color/green"
            android:textSize="@dimen/s40"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d700"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb1">

        <EditText
            android:layout_width="@dimen/d340"
            android:layout_height="@dimen/d75"
            android:layout_marginTop="@dimen/d100"
            android:inputType="text"
            android:text="@string/nal"
            android:textColor="@color/white_green"
            android:textSize="@dimen/s20"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:layout_width="@dimen/d340"
            android:layout_height="@dimen/d75"
            android:inputType="number"
            android:text="@string/price"
            android:textColor="@color/white_green"
            android:textSize="@dimen/s20"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="@dimen/d340"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d50"
            android:text="@string/category"
            android:textColor="@color/green"
            android:textSize="@dimen/s20"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d30"
                android:text="@string/find"
                android:textColor="@color/white_green"
                android:textSize="@dimen/s20" />

            <ImageButton
                android:layout_width="@dimen/d75"
                android:layout_height="@dimen/d60"
                android:layout_marginStart="@dimen/d175"
                android:contentDescription="@string/find"
                android:src="@drawable/image" />
        </LinearLayout>

        <EditText
            android:layout_marginTop="@dimen/d30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_39"
            android:inputType="text"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="336dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/sort"
            android:textColor="@color/white_green" />

        <TextView
            android:layout_width="@dimen/d340"
            android:layout_height="@dimen/d50"
            android:layout_marginTop="@dimen/d20"
            android:background="@color/white_smth"
            android:gravity="center"
            android:text="@string/not_found"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>