<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tovary">
    <ImageView
        android:layout_width="412dp"
        android:layout_height="110dp"
        android:layout_marginBottom="640dp"
        android:src="@drawable/rectangle_77"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/aaaa">

    </ImageView>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/search">

    </ImageView>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="13dp"
        android:src="@drawable/shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/korzina">

    </ImageView>

    <ImageView
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu">

    </ImageView>

    <Button
        android:id="@+id/button2"
        android:layout_width="289dp"
        android:layout_height="187dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/green"
        android:text="@string/reklama"
        android:fontFamily="@font/roboto_bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="26dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="300dp"
        android:src="@drawable/component_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/more">

    </ImageView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="352dp"
        android:src="@drawable/rectangle_42__1_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/kafel1">

    </ImageView>

    <ImageView
        android:layout_width="106dp"
        android:layout_height="14dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/component_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:contentDescription="@string/description1">

    </ImageView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/rectangle_43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/kafel1">

    </ImageView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="520dp"
        android:src="@drawable/rectangle_44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/kafel1">

    </ImageView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/rectangle_45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/kafel1">

    </ImageView>

    <ImageView
        android:layout_width="106dp"
        android:layout_height="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:src="@drawable/component_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:contentDescription="@string/description1">

    </ImageView>

    <ImageView
        android:layout_width="106dp"
        android:layout_height="14dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/component_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:contentDescription="@string/description1">

    </ImageView>

    <ImageView
        android:layout_width="106dp"
        android:layout_height="14dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/component_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:contentDescription="@string/description1">

    </ImageView>

    <ImageView
        android:layout_width="118dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>

