<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop">
    <ImageView
        android:layout_width="392dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/component_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/search">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/popular"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/rectangle_57"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="192dp"
        android:src="@drawable/rectangle_56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dush">

    </ImageView>


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/rectangle_59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/vanna">

    </ImageView>

    <ImageView
        android:layout_width="96dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:src="@drawable/component_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

    </ImageView>

    <ImageView
        android:layout_width="96dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/component_17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

    </ImageView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="428dp"
        android:src="@drawable/rectangle_58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:layout_width="96dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/component_17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

    </ImageView>

    <ImageView
        android:layout_width="96dp"
        android:layout_height="47dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/component_17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

    </ImageView>

    <ImageView
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/component_34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <ImageView
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/component_34__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageView>

    <ImageView
        android:layout_width="472dp"
        android:layout_height="33dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="44dp"
        android:src="@drawable/line_19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageView>

    <ImageView
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/component_45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <ImageView
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="95dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ellipse_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <ImageView
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/component_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>